RESOLVED FIXED127153
Crash when destroying WKInteractionView
https://bugs.webkit.org/show_bug.cgi?id=127153
Summary Crash when destroying WKInteractionView
Enrica Casucci
Reported 2014-01-16 17:22:08 PST
The UIWKSelectionAssistant is a RetainPtr and it is being deallocated after the view and its gesture recognizers have been destroyed. The parent class UIWebSelectionAssistant assumes to be deallocated before the view is gone. <rdar://problem/15840761>
Attachments
Patch (1.53 KB, patch)
2014-01-16 17:30 PST, Enrica Casucci
andersca: review+
Enrica Casucci
Comment 1 2014-01-16 17:30:05 PST
Enrica Casucci
Comment 2 2014-01-16 17:41:31 PST
Committed revision 162175
Note You need to log in before you can comment on or make changes to this bug.