Crash when destroying WKInteractionView. https://bugs.webkit.org/show_bug.cgi?id=127153 <rdar://problem/15840761>

Reviewed by Anders Carlsson.

UIWKSelectionAssistant is a RetainPtr and it is being
deallocated after the view and its gesture recognizers
have been destroyed.
The parent class UIWebSelectionAssistant assumes to be
deallocated before the view is gone.
We deallocate the interaction assistants explicitly to
fix the problem.

* UIProcess/API/ios/WKInteractionView.mm:
(-[WKInteractionView dealloc]):



Canonical link: https://commits.webkit.org/145142@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162175 268f45cc-cd09-0410-ab3c-d52691b4dbfc